--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,1 +1,19 @@
-<div id="root"></div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="When - Event Coordination App"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/when_logo.png" />
+    <title>When - Event Coordination</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
