--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,5 +15,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <a href="/privacy" style="position:absolute;left:-9999px">Privacy Policy</a>
   </body>
 </html>
