fix: update noscript content in index.html for better accessibility
- Replaced the existing noscript message with a more informative header and description about the app's purpose.
- Added a link to the Privacy Policy for users who have JavaScript disabled, enhancing user experience and compliance.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,8 +13,11 @@
     <title>When - Event Coordination</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      <h1>When - Event Coordination</h1>
+      <p>Find the perfect time, together. When brings people together at the perfect time, every time.</p>
+      <p><a href="/privacy">Privacy Policy</a></p>
+    </noscript>
     <div id="root"></div>
-    <a href="/privacy" style="position:absolute;left:-9999px">Privacy Policy</a>
   </body>
 </html>
